--- a/index.html
+++ b/index.html
@@ -46,12 +46,17 @@
     <p class="hero-sub animate__animated animate__fadeInUp mb-4">نقدم خدماتنا على مدار 24 ساعة في جميع مناطق الكويت، ونوفر أفضل حلول الصيانة والفك والتركيب باحترافية عالية</p>
     <div class="hero-line"></div>
     <div class="mt-4">
-      <a href="https://wa.me/99074511" class="btn btn-warning btn-lg animate__animated animate__bounceIn">
-        <i class="bi bi-whatsapp me-2"></i> اتصل الآن عبر الواتساب
-      </a>
+<a href="https://wa.me/+96599074511"
+   class="btn btn-lg animate__animated animate__bounceIn"
+   target="_blank"
+   style="z-index: 999; position: relative;">
+  <i class="bi bi-whatsapp me-2"></i> اتصل الآن عبر الواتساب
+</a>
+
     </div>
   </div>
 </section>
+
 
 <!-- Services -->
 <section id="services" class="py-5 text-center bg-light">
